--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -622,6 +622,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .min-h-24 {
   min-height: 6rem;
 }
+.min-h-90 {
+  min-height: 23rem;
+}
 .w-full {
   width: 100%;
 }
@@ -1272,6 +1275,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .desktop\:flex {
     display: flex;
+  }
+
+  .desktop\:min-h-90 {
+    min-height: 23rem;
   }
 
   .desktop\:w-\[65rem\] {
